--- a/builder/profile/Debian/webox/mysql/etc/my.cnf
+++ b/builder/profile/Debian/webox/mysql/etc/my.cnf
@@ -21,6 +21,7 @@ socket            = ${wbapp}/var/run/mysql/mysqld.sock
 port              = 3306
 bind_address      = 127.0.0.1
 
+basedir           = ${wbapp}
 datadir           = ${wbapp}/var/lib/mysql
 tmpdir            = ${wbapp}/var/tmp/mysql
 
