--- a/builder/profile/MacOS/webox/nginx/etc/nginx.conf
+++ b/builder/profile/MacOS/webox/nginx/etc/nginx.conf
@@ -9,7 +9,7 @@ worker_rlimit_nofile 102400;
 
 error_log var/log/error.log crit;
 
-pid var/run/nginx.pid;
+pid var/run/nginx/nginx.pid;
 
 events {
 
