--- a/builder/profile/Debian/webox/nginx/etc/nginx.conf
+++ b/builder/profile/Debian/webox/nginx/etc/nginx.conf
@@ -36,7 +36,7 @@ http {
     ;
 
     access_log off;
-    #access_log var/log/access.log main;
+    #access_log var/log/nginx/access.log main;
 
     sendfile on;
     tcp_nopush on;
