--- a/builder/profile/MacOS/webox/nginx/etc/nginx.conf
+++ b/builder/profile/MacOS/webox/nginx/etc/nginx.conf
@@ -5,7 +5,7 @@ worker_processes auto;
 worker_cpu_affinity auto;
 worker_rlimit_nofile 102400;
 
-error_log var/log/error.log crit;
+error_log var/log/nginx/error.log crit;
 
 pid var/run/nginx/nginx.pid;
 
@@ -36,7 +36,7 @@ http {
     ;
 
     access_log off;
-    #access_log var/log/access.log main;
+    #access_log var/log/nginx/access.log main;
 
     sendfile on;
     tcp_nopush on;
