--- a/builder/config
+++ b/builder/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 #
 
-if [ "$UID" != "0" ]; then
+if [ $UID -ne 0 ]; then
     echo "This script requires root privileges"
     exit 1
 fi
