--- a/builder/profile/Darwin/webox/php7/etc/php-fpm.conf
+++ b/builder/profile/Darwin/webox/php7/etc/php-fpm.conf
@@ -141,4 +141,4 @@ process.max = 256
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
 ;  - ${wbapp} otherwise
-include=etc/php7/fpm.d/*.conf
+include=etc/php7/pool.d/*.conf
