--- a/builder/profile/Darwin/webox/redis/etc/redis.conf
+++ b/builder/profile/Darwin/webox/redis/etc/redis.conf
@@ -1,3 +1,5 @@
+# Redis configuration file.
+#
 # Note that in order to read the configuration file, Redis must be
 # started with the file path as first argument:
 #
@@ -19,5 +21,5 @@
 # options, it is better to use include as the last line.
 #
 
-include ${wbapp}/etc/redis/conf.d/server.conf
-include ${wbapp}/etc/redis/conf.d/useful.conf
+include ${wbapp}/etc/redis/conf.d/default.conf
+include ${wbapp}/etc/redis/conf.d/override.conf
