--- a/builder/profile/Darwin/webox/nginx/etc/http.d/15.proxy.conf
+++ b/builder/profile/Darwin/webox/nginx/etc/http.d/15.proxy.conf
@@ -12,10 +12,28 @@ proxy_read_timeout 180;
 proxy_send_timeout 180;
 
 ##
-# header
+# forwarded
 ##
 
 proxy_set_header Host $host;
 proxy_set_header X-Forwarded-Proto $scheme;
 proxy_set_header X-Forwarded-Port $remote_port;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+##
+# websocket
+##
+
+# map $http_upgrade $connection_upgrade {
+#     default upgrade;
+#     '' close;
+# }
+
+# proxy_set_header Upgrade $http_upgrade;
+# proxy_set_header Connection $connection_upgrade;
+
+##
+# cache store
+##
+
+# proxy_cache_path ${wbapp}/var/tmp/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:32m max_size=4g inactive=7d;
