--- a/builder/profile/Darwin/app/misc/nginx/etc/vhost.d/default.conf
+++ b/builder/profile/Darwin/app/misc/nginx/etc/vhost.d/default.conf
@@ -23,6 +23,6 @@ server {
 
     include http.d/21.server_status;
     include http.d/22.server_error_page;
-    include http.d/25.server_fastcgi_php7;
+    include http.d/25.server_fastcgi_php;
 
 }
