--- a/builder/profile/Darwin/app/misc/php/etc/php-fpm.conf
+++ b/builder/profile/Darwin/app/misc/php/etc/php-fpm.conf
@@ -15,14 +15,14 @@
 ; Pid file
 ; Note: the default prefix is ${wbapp}/var
 ; Default Value: none
-pid = run/php7/fpm.pid
+pid = run/php/fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; into a local file.
 ; Note: the default prefix is ${wbapp}/var
 ; Default Value: log/php-fpm.log
-error_log = log/php7/fpm.log
+error_log = log/php/fpm.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
@@ -141,4 +141,4 @@ process.max = 256
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
 ;  - ${wbapp} otherwise
-include=etc/php7/pool.d/*.conf
+include=etc/php/pool.d/*.conf
