--- a/builder/profile/Darwin/app/misc/php/etc/pool.d/default.conf
+++ b/builder/profile/Darwin/app/misc/php/etc/pool.d/default.conf
@@ -10,16 +10,16 @@ prefix = ${wbapp}
 
 ; Unix user/group of processes
 
-user = www-data
-group = www-data
+user = _www
+group = _www
 
-listen = var/run/php7/$pool.sock
+listen = var/run/php/$pool.sock
 
 ; Set permissions for unix socket, if one is used.
 
-listen.owner = www-data
-listen.group = www-data
-listen.mode = 0660
+listen.owner = _www
+listen.group = _www
+listen.mode = 0770
 
 ; Choose how the process manager will control the number of child processes.
 
@@ -35,7 +35,7 @@ pm.max_requests = 10240
 ; The URI to view the FPM status page. If this value is not set, no URI will be
 ; recognized as a status page.
 
-pm.status_path = /status/$pool.php7
+pm.status_path = /status/$pool.php
 
 ; The access log file
 
