--- a/builder/profile/Darwin/app/misc/nginx/etc/nginx.conf
+++ b/builder/profile/Darwin/app/misc/nginx/etc/nginx.conf
@@ -1,7 +1,7 @@
 
 user _www _www;
 
-worker_processes auto;
+worker_processes 2;
 worker_rlimit_nofile 65535;
 
 error_log var/log/nginx/error.log crit;
