--- a/builder/Declare/basefs/app/php/etc/php.ini
+++ b/builder/Declare/basefs/app/php/etc/php.ini
@@ -47,14 +47,14 @@ log_errors_max_len = 1024
 
 html_errors = Off
 
-error_log = "${whome}/var/log/php/error.log"
+error_log = ${whome}/var/log/php/error.log
 
 ;;;;;;;;;;;;;;;;;
 ; Data Handling ;
 ;;;;;;;;;;;;;;;;;
 
-variables_order = "GPCS"
-request_order = "GP"
+variables_order = GPCS
+request_order = GP
 
 register_argc_argv = Off
 auto_globals_jit = On
@@ -65,9 +65,9 @@ post_max_size = 30M
 ; Paths and Directories ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;
 
-include_path = "."
+include_path = .
 
-sys_temp_dir = "${whome}/var/tmp/php"
+sys_temp_dir = ${whome}/var/tmp/php
 
 ;;;;;;;;;;;;;;;;
 ; File Uploads ;
@@ -75,7 +75,7 @@ sys_temp_dir = "${whome}/var/tmp/php"
 
 file_uploads = On
 
-upload_tmp_dir = "${whome}/var/tmp/php"
+upload_tmp_dir = ${whome}/var/tmp/php
 
 upload_max_filesize = 20M
 
@@ -87,24 +87,24 @@ max_file_uploads = 20
 
 [Date]
 
-date.timezone = "Asia/Shanghai"
+date.timezone = Asia/Shanghai
 
 [Pdo_mysql]
 
-pdo_mysql.default_socket = "${whome}/var/run/mysql/mysqld.sock"
+pdo_mysql.default_socket = ${whome}/var/run/mysql/mysqld.sock
 
 [mail function]
 
 mail.add_x_header = Off
-mail.log = "${whome}/var/log/php/mail.log"
+mail.log = ${whome}/var/log/php/mail.log
 
 [MySQLi]
 
-mysqli.default_socket = "${whome}/var/run/mysql/mysqld.sock"
+mysqli.default_socket = ${whome}/var/run/mysql/mysqld.sock
 
 [Session]
 
-session.save_path = "${whome}/var/tmp/php"
+session.save_path = ${whome}/var/tmp/php
 
 session.gc_probability = 5
 session.gc_divisor = 1000
