--- a/builder/Declare/basefs/etc/nginx/vhost.d/default.conf
+++ b/builder/Declare/basefs/etc/nginx/vhost.d/default.conf
@@ -21,8 +21,8 @@ server {
     index index.php index.htm index.html;
     try_files $uri $uri/ /index.php$is_args$args;
 
-    include http.d/21.server_status;
-    include http.d/22.server_error_page;
-    include http.d/25.server_fastcgi_php;
+    include http.d/server_status;
+    include http.d/server_error_page;
+    include http.d/server_fastcgi_php;
 
 }
